--- a/Project1- Automated Theme Change/index.html
+++ b/Project1- Automated Theme Change/index.html
@@ -1,1 +1,16 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body style="background-color: grey;">
+   <h1> Start Should Change the Background color every second </h1>
+   <button id="start">START</button>
+   <button id="stop">STOP</button>
+
+<script src="script.js"></script>
+</body>
+</html>
